# SplineBenchmarks

./: .gitignore  CMakeLists.txt  README.md  eigenSpline.cpp  einsplineSpline.cpp  gslSpline.cpp  plotGSLSpline.py  splinterSpline.cpp
cmake/: FindEinspline.cmake  FindFFTW3.cmake  FindGSL.cmake  FindSplinter.cmake
